--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div id="riddle-container" class="riddle-container">
+<!-- <div id="riddle-container" class="riddle-container">
     <div class="riddle-box">
         <h2>Julrim</h2>
-        <p>Vad är jag som gömmer mönster, lämnar hemliga spår.<br>
-            Sjunger i tystnad, flätar kedjor genom vintrar och vår.<br>
-            Ej blott kan du se mig, men bär mig likaså.<br>
-            En nyckel till minnen, som gömda ändå.<br>
+        <p>Vad är jag som gömmer mönster, lämnar hemliga spår,<br>
+            Sjunger i tystnad, genom vintrar och vår,<br>
+            Ej blott kan du se mig, men bär mig likaså,<br>
+            en nyckel till minnen, som gömda ändå.<br>
             </p>
         <input type="text" id="riddle-answer" placeholder="Skriv ditt svar här...">
         <button onclick="checkAnswer()">Svara</button>
         <p id="feedback" class="feedback"></p>
     </div>
-</div>
+</div> -->
 
 <div class="textbubbla-container">
 	<div class="textbubbla">
